Record a second verification run of both Java 26 benchmark projects
Re-ran both projects from a fresh clone on an unrelated 4-core Linux
container with Temurin 26.0.2+10 and Caddy 2.11.4. No source changes were
needed: both build and run end to end, the Caddyfile SNI fix still carries
HTTP/3 through the handshake on the newer Caddy, and ZGC still rejects a
compressed-oops cache, so the two-artifact split stays necessary.

Three things the second run changed:

- The clean-network HTTP/3 rows did not reproduce. The first run had HTTP/3
  losing every column; this one has HTTP/2 winning every p50 and HTTP/3
  winning every p95/p99 on the 1 MB rows, on a loss-free loopback. The two
  runs disagree on sign, so neither is evidence for the clean-network claim.

- "Nothing at all is printed" for an unusable AOT cache was wrong. Both the
  oop-mismatch and truncated-cache paths log warnings and errors to stderr
  with no logging flags set, and then start uncached. The failure is
  non-fatal, not silent. Corrected in place and explained in a new section.

- netem is unavailable in this environment too (no sch_netem, even after
  installing iproute2), so the loss-injection runs are not blocked on
  tooling in either container - they need real hardware.

Both reference-output.md files gain the new run's tables and analysis;
TODO.md records what the run settled and what it did not.